--- a/Labs/module-1_labs/01_python/02_lab-tuple-set-dict/your-code/challenge-2.ipynb
+++ b/Labs/module-1_labs/01_python/02_lab-tuple-set-dict/your-code/challenge-2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,11 +38,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[25, 73, 97, 54, 1, 32, 13, 4, 5, 3, 44, 24, 45, 78, 51, 39, 74, 81, 12, 42, 19, 23, 2, 11, 94, 69, 10, 92, 20, 30, 43, 99, 68, 49, 82, 14, 34, 9, 66, 98, 95, 28, 15, 33, 67, 58, 18, 31, 40, 26, 83, 47, 46, 50, 56, 70, 72, 63, 38, 36, 60, 62, 55, 84, 7, 8, 21, 53, 96, 16, 59, 77, 57, 79, 93, 71, 64, 52, 37, 85]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "sample_list_1=random.sample(range(1,100), 80)\n",
+    "\n",
+    "print(sample_list_1)"
    ]
   },
   {
@@ -54,11 +65,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "80"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set1=set(sample_list_1)\n",
+    "\n",
+    "len(sample_list_1)"
    ]
   },
   {
@@ -77,11 +102,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[29, 98, 19, 40, 20, 27, 24, 20, 21, 10, 5, 84, 84, 73, 0, 76, 80, 19, 44, 86, 90, 30, 68, 44, 58, 21, 53, 80, 80, 91, 61, 47, 66, 7, 74, 14, 39, 49, 33, 57, 69, 82, 37, 46, 80, 48, 83, 61, 91, 77, 11, 12, 61, 39, 39, 73, 1, 15, 87, 60, 77, 47, 32, 71, 5, 39, 85, 96, 14, 3, 36, 6, 96, 25, 15, 53, 37, 28, 23, 90]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "sample_list_2 = [random.randint(0, 100) for k in range (80)]\n",
+    "\n",
+    "print(sample_list_2)"
    ]
   },
   {
@@ -93,11 +129,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "56"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set2 = set(sample_list_2)\n",
+    "\n",
+    "len(set2)"
    ]
   },
   {
@@ -109,11 +159,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 4, 8, 9, 13, 16, 18, 26, 31, 34, 38, 42, 43, 45, 50, 51, 52, 54, 55, 56, 59, 62, 63, 64, 67, 70, 72, 78, 79, 81, 92, 93, 94, 95, 97, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set3 = set1 - set2\n",
+    "\n",
+    "print(set3)"
    ]
   },
   {
@@ -125,11 +186,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 6, 91, 76, 48, 80, 61, 86, 87, 90, 27, 29}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set4= set2 - set1\n",
+    "\n",
+    "print(set4)"
    ]
   },
   {
@@ -141,11 +213,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 3, 5, 7, 10, 11, 12, 14, 15, 19, 20, 21, 23, 24, 25, 28, 30, 32, 33, 36, 37, 39, 40, 44, 46, 47, 49, 53, 57, 58, 60, 66, 68, 69, 71, 73, 74, 77, 82, 83, 84, 85, 96, 98}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set5 = set1 & set2\n",
+    "\n",
+    "print(set5)"
    ]
   },
   {
@@ -165,11 +248,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n",
+      "56\n",
+      "36\n",
+      "12\n",
+      "44\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "print(len(set1))\n",
+    "print(len(set2))\n",
+    "print(len(set3))\n",
+    "print(len(set4))\n",
+    "print(len(set5))\n",
+    "\n",
+    "len(set3) + len(set4) + len(set5) * 2 == len(set1) + len(set2)"
    ]
   },
   {
@@ -181,11 +293,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set6 = set()"
    ]
   },
   {
@@ -197,11 +310,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set6.update(set3, set5)"
    ]
   },
   {
@@ -213,11 +327,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set1 == set6"
    ]
   },
   {
@@ -229,11 +355,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set2.issubset(set1)\n",
+    "\n",
+    "set3.issubset(set1)"
    ]
   },
   {
@@ -247,11 +387,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set3.union(set4, set5) == set1.union(set2)\n"
    ]
   },
   {
@@ -263,11 +415,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "s = set1.pop()\n",
+    "\n",
+    "print(s)"
    ]
   },
   {
@@ -283,12 +446,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{3, 4, 5, 7, 8, 10, 12, 13, 14, 15, 16, 18, 20, 23, 24, 25, 26, 28, 30, 32, 33, 34, 36, 37, 38, 40, 42, 43, 44, 45, 46, 47, 50, 52, 53, 54, 55, 56, 57, 58, 60, 62, 63, 64, 66, 67, 68, 70, 72, 73, 74, 77, 78, 82, 83, 84, 85, 92, 93, 94, 95, 96, 97, 98}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "list_to_remove = [1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99]\n",
+    "\n",
+    "for n in list_to_remove:\n",
+    "    if n in set1:\n",
+    "        set1.remove(n)\n",
+    "\n",
+    "print(set1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -307,7 +492,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
